Add note about lifetime of the pointer returned by QClipboard::mimeData()

Explain that it might become invalidated when the clipboard changes.

Task-number: QTBUG-55737
Change-Id: Ic7366901f60647caab44930ab03915fd0c9aba1a
Reviewed-by: Topi Reiniö <topi.reinio@theqtcompany.com>